# python-starter-template

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  run_all_tests.py  test_runner.py
docs/: CURRICULUM.md  NEW_PROJECT_PLAN.md  plan.md  uv_build_backend_instead_of_hatchling.md
scripts/: test_all.sh
sigrid/: AGENTS.md  Makefile  mypy.ini
sigrid/.github/workflows/: ci.yml
sigrid/docs/: 01-basic-chat.ipynb  apidog.md
sigrid/src/app/: main.py
sigrid/tests/: main.py  test_storm_answer.py  test_storm_client_errors.py  test_storm_client_http.py  test_storm_context.py  test_storm_params_and_stream.py  test_validation.py
src/app/: main.py
tests/: test_api_root.py  test_api_users_get_by_id.py  test_api_users_list.py  test_api_users_post.py  test_core_user.py  test_core_user_dump.py  test_core_user_instantiation.py  test_integration.py
