[project]
name = "api-rag-pipeline"
version = "0.1.0"
description = "External API driven RAG pipeline with multi-module architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.17.1",
    "types-python-dateutil>=2.9.0.20250809",
]

[tool]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*", "**/tests/**/*", "**/test_*.py"]

[tool.mypy]
exclude = ["tests", "test_*.py"]

[tool.ruff]
exclude = ["tests", "test_*.py"]

[tool.uv.workspace]
members = ["packages/*"]
