[project]
name = "api-rag-pipeline"
version = "0.1.0"
description = "External API driven RAG pipeline with multi-module architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "rag-core",
    "storm-client",
    "rag-embedder",
    "rag-engine",
    "rag-service",
    "rag-api",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.17.1",
    "types-python-dateutil>=2.9.0.20250809",
]

[tool]

[tool.pyrefly]
project-includes = ["src/**/*"]
project-excludes = ["**/*venv/**/*", "**/tests/**/*", "**/test_*.py", "packages/**/*"]

[tool.mypy]
exclude = ["tests", "test_*.py"]

[tool.ruff]
exclude = ["tests", "test_*.py"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
rag-core = { workspace = true }
storm-client = { workspace = true }
rag-embedder = { workspace = true }
rag-engine = { workspace = true }
rag-service = { workspace = true }
rag-api = { workspace = true }
